--- a/index.html
+++ b/index.html
@@ -1,50 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
   <title>Frontend Mentor | Single Price Grid Component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <!-- font-awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" />
+  <!-- normalize -->
+  <link rel="stylesheet" href="./css/normalize.css" />
+  <!-- main css -->
+  <link rel="stylesheet" href="./css/main.css" />
 </head>
+
 <body>
-  Join our community
+  <main class="main">
+    <article class="price-grid-card">
+      <header class="header section">
+        <h1 class="price-grid-title">Join our community</h1>
+        <h2 class="price-grid-subtitle">30-day, hassle-free money back guarantee</h2>
+        <p class="price-grid-text">
+          Gain access to our full library of tutorials along with expert code reviews.
+          Perfect for any developers who are serious about honing their skills.
+        </p>
+      </header>
+      <!-- start of section -->
+      <section class="section price-section">
+        <h2 class="section-title price-section-title">Monthly Subscription</h2>
+        <div class="price-container">
+          <div class="monthly-price">
+            <span class="price-value">&dollar;29 </span>
+            <span class="time-period">per month</span>
+          </div>
+          <p class="price-daily">Full access for less than &dollar;1 a day</p>
+        </div>
+        <button class="price-section-btn">Sign Up</button>
+      </section>
+      <!-- end of start of section -->
+      <section class="section features-section">
+        <h2 class="section-title features-title">Why Us</h2>
+        <div class="features">
+          <p>Tutorials by industry experts</p>
+          <p>Peer &amp; expert code review</p>
+          <p>Coding exercises</p>
+          <p>Access to our GitHub repos</p>
+          <p>Community forum</p>
+          <p>Flashcard decks</p>
+          <p>New videos every week</p>
+        </div>
+      </section>
+    </article>
+  </main>
 
-  30-day, hassle-free money back guarantee
-
-  Gain access to our full library of tutorials along with expert code reviews. 
-  Perfect for any developers who are serious about honing their skills.
-
-  Monthly Subscription
-
-  &dollar;29 per month
-
-  Full access for less than &dollar;1 a day
-
-  Sign Up
-
-  Why Us
-
-  Tutorials by industry experts
-  Peer &amp; expert code review
-  Coding exercises
-  Access to our GitHub repos
-  Community forum
-  Flashcard decks
-  New videos every week
-  
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
 </body>
+
 </html>
